Fix styling of captions and spacing below articles
Fixes #2. #3

--- a/themes/gillion-child/style.css
+++ b/themes/gillion-child/style.css
@@ -7,10 +7,30 @@ Template: gillion
 */
 
 /* Add your custom CSS below */
-h1, h2, h3, h4, h5, h6{ 
+/* h1, h2, h3, h4, h5, h6{ 
 	margin: 32px 0 8px 0;
-}
+} */
 
 .MicroServiceContainer{
 	width: 100%;
+}
+
+.post-content img,
+.post-content img:not(:last-child){
+	margin: 0;
+}
+
+.post-content p,
+.post-content p:not(:last-child){
+	margin-bottom: 15px;
+}
+
+.post-content p:last-child{
+	margin-bottom: 30px;
+}
+
+figcaption{
+	font-size: 14px;
+	font-style: italic;
+	text-align: center;
 }
